// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Placeholder> component Custom Class name attached 1`] = `
<div
  className="tribe-editor__placeholder custom-class-name"
>
  Custom Text
</div>
`;

exports[`<Placeholder> component Default behavior 1`] = `
<div
  className="tribe-editor__placeholder"
>
  Custom Text
</div>
`;
